[package]
name = "sprog"
version = "0.1.0"
edition = "2018"
description = "A Rust library for interacting with the the Sprog 3 DCC decoder"
homepage = "https://webdcc.com"
repository = "https://github.com/Eelviny/sprog"
license = "GPL-3.0-or-later"
license-file = "LICENSE"

[dependencies]
serial = "0.4.0"